# lorelei

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  notes.md
src/: BuildAPI.cmake  CMakeLists.txt  conf.cmake  loreleiConfig.cmake.in
src/base/libs/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/ClangExtras/: CMakeLists.txt  FunctionInfo.cpp  FunctionTypeView.cpp  TypeUtils.cpp
src/libs/Core/: CMakeLists.txt
src/libs/DLCall/: CMakeLists.txt  ThunkDatabase.cpp
src/libs/GuestRT/: CMakeLists.txt  GuestClient.cpp  GuestSyscallBridge.cpp  GuestThunkContext.cpp  main.cpp
src/libs/HostRT/: CMakeLists.txt  HostServer.cpp  HostSyscallDispatcher.cpp  HostThunkContext.cpp  MultiThreading_p.h  Timing.h  main.cpp
src/libs/Midware/: CMakeLists.txt
src/libs/Support/: CMakeLists.txt  ConfigFile.cpp  Logging.cpp  StringExtras.cpp
src/libs/TLC/: CMakeLists.txt
src/libs/TLCApi/: CMakeLists.txt  Diagnostics.cpp  DocumentContext.cpp  ManifestFile.cpp  ManifestSummary.cpp  Pass.cpp  ProcSnippet.cpp
src/libs/Utils/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/GuestRT/: CMakeLists.txt  GuestClient.cpp  GuestThunkContext.cpp  main.cpp
src/modules/HostRT/: CMakeLists.txt  HostServer.cpp  HostThunkContext.cpp  main.cpp
src/modules/QEMUThreadHook/: main.cpp
src/modules/libs/: CMakeLists.txt
src/programs/: CMakeLists.txt
src/programs/aes/: CMakeLists.txt  main.c
src/programs/player/: CMakeLists.txt  main.cpp
src/programs/printf/: CMakeLists.txt  main.cpp
src/runtimes/: CMakeLists.txt
src/runtimes/guest/: CMakeLists.txt  syscall_helper.h  user.c  user_extra.c  user_proc.c
src/runtimes/host/: CMakeLists.txt  hostrt.cpp  hostrt_helper.c  hostrt_p.h  util.cpp  util.h
src/runtimes/shared/: CMakeLists.txt  shared.c  shared_callback.c  shared_vargs.c
src/tests/: CMakeLists.txt
src/tests/auto/: CMakeLists.txt
src/tests/manual/: CMakeLists.txt
src/thunks/: .gitignore  AddThunk.cmake  CMakeLists.txt  ThunkAPI.cmake
src/thunks/A/: CMakeLists.txt  Desc.h  Manifest_host.cpp  Symbols_autogen.conf
src/thunks/EGL/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Symbols_autogen.conf  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/GL/: CMakeLists.txt  Desc.h  GL_ProcFilters_guest.h  GL_ProcFilters_host.h  GL_procFilters_guest.h  GL_procFilters_host.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols_autogen.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_manifest_host.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake
src/thunks/GLEW/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/GLX/: CMakeLists.txt  Desc.h  GLX_private.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols.conf  Symbols_autogen.conf  Thunk_config.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_manifest_host.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt  x11_mappings.cpp
src/thunks/OpenGL/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Symbols_autogen.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake
src/thunks/SDL-1.2/: CMakeLists.txt  Thunk_config_symbols.conf  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/SDL2/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  lorelib_impl1.c  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/SDL2-2.0/: CMakeLists.txt  Thunk_config.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_procs_desc.h
src/thunks/X11/: CMakeLists.txt  Thunk_config_symbols.conf  Thunk_manifest_host.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/X11-xcb/: CMakeLists.txt  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_procs_desc.h
src/thunks/_sample/: CMakeLists.txt  Thunk_config.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_manifest_host.cpp  Thunk_procs_desc.h
src/thunks/_template/: lorelib_guest.c  lorelib_host.c
src/thunks/avcodec/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/avdevice/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/avfilter/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/avformat/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/avutil/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/crypto/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/curl/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/fftw3/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/pixman/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/ssl/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/swresample/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/swscale/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/vorbis/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/vorbisenc/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/vorbisfile/: lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/vulkan/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Manifest_host.cpp  Symbols_autogen.conf  Thunk_config.conf  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_manifest_host.cpp  Thunk_procs_desc.h  VulkanApiGen.cmake  VulkanApis.h  VulkanThunks.cpp  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/xcb/: CMakeLists.txt  Thunk_config_symbols.conf  Thunk_manifest_host.cpp  Thunk_procs_desc.h
src/thunks/zlib/: CMakeLists.txt  Desc.h  Manifest_guest.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks/zstd/: CMakeLists.txt  Desc.h  Manifest_host.cpp  Thunk_config_symbols.conf  Thunk_manifest_guest.cpp  Thunk_procs_desc.h  lorelib_manifest.c  options.cmake  symbols.txt
src/thunks2/: CMakeLists.txt
src/thunks2/SDL2-2.0/: CMakeLists.txt  (+4 more)
src/tools/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/tooling/: CMakeLists.txt  main.cpp
(+610 files in other folders)
