add_subdirectory(_sample)

# SDL
add_subdirectory(SDL-1.2)
add_subdirectory(SDL2-2.0)

# Graphics
add_subdirectory(OpenGL)
add_subdirectory(GL)
add_subdirectory(GLX)
add_subdirectory(EGL)
add_subdirectory(vulkan)

# Compression
add_subdirectory(zlib)
add_subdirectory(zstd)

# XWindow
# add_subdirectory(xcb)
# add_subdirectory(X11)
# add_subdirectory(X11-xcb)
