lore_add_auto_test(tst_VariadicAdaptor.cpp)
target_link_libraries(tst_VariadicAdaptor PRIVATE LoreCore)

lore_add_auto_test(tst_CallbackTrampoline.cpp)
target_link_libraries(tst_CallbackTrampoline PRIVATE LoreCore)
target_compile_options(tst_CallbackTrampoline PRIVATE "-ffixed-${LORELEI_HOST_FIXED_REGISTER}")